Revision history for Perl extension TAP::Formatter::JUnit.

0.10    ???

0.09    Wed Jan 25 15:13 PST 2012
    - Switch from Class::Field to Moose.  Thanks to Dave Lambley for the poke,
      and the patience.
    - Track and report timings for "(init)" and "(teardown)" of the test.
      Without this, Hudson does not properly report on the total time needed
      for a test suite (it calculates total time by adding up the constituent
      tests, not by looking at the <testsuite> "time" attribute).
    - Rewrite internals, switching from a streaming style to an iterative style
      of processing the TAP.  Same results, but easier to work with.

0.08    Thu Jul 15 23:44 PDT 2010
    - RT#58838, "Error reporting on die or missing plan".  Thanks to Colin
      Robertson.  Output compatible w/Hudson (so it now sees these as errors).
    - RT#59206, "Plan/Tests Mismatch".  Thanks for Phillip Kimmey.  JUnit
      output now reports mismatches with an "<error>" so Hudson detects it.

0.07    Fri Jan 29 23:23 PST 2010
    - Fix RT#53927, "Times reported by T:F:JUnit for individual test cases in
      a .t file are incorrect".  Thanks to Marc Abramowitz.

0.06    Wed Jan 13 21:24 PST 2010
    - Fix bug in tap2junit which would cause multiple TAP streams to have the
      *same* name in their output JUnit XML.  Introduced in 0.04.

0.05    Wed Jan 13 16:32 PST 2010
    - Add support for ALLOW_PASSING_TODOS environment variable, which forces
      T:F:JUnit to treat passing TODOs as a "pass" and not a "fail" condition.
      Thanks to Joe McMahon.
    - Removed need for Test::Output; I forgot that you can pass a FH directly
      in to TAP::Harness.  Doh!

0.04    Wed Jan 13 15:51 PST 2010
    - extra escaping/cleanup of characters before inserting them into the XML
      stream, to keep JUnit parsers like Hudson's from choking.  Thanks go out
      to Joe McMahon and Michael Nachbaur for prodding to get this fixed and
      for patches.